changed padding and margin to fix collapsing margins on swat display
svn commit r14913

--- a/www/styles/swat-message-display.css
+++ b/www/styles/swat-message-display.css
@@ -1,8 +1,8 @@
 /* SwatMessageDisplay */
 
 .swat-message-display {
-	padding: 0;
-	margin: 1em 0 0 0;
+	margin: 0;
+	padding: 1px 0;
 }
 
 .swat-message-display .swat-message {
